objects/iPhone__c.object
<CustomObject>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descriptions_of_issues__c</fullName>
        <inlineHelpText>explain what is wrong with the iphone</inlineHelpText>
        <label>Descriptions of issues</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_it_charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does it charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_of_User__c</fullName>
        <label>Email of User</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expire_Date__c</fullName>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Iphone_Version__c</fullName>
        <description>What version is the owners iphone</description>
        <label>Iphone Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5S</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6S</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Least_used_app__c</fullName>
        <label>Least used app</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Merge_3__c</fullName>
        <label>Mass Merge 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Merge_4__c</fullName>
        <label>Mass Merge 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mass_Merge_6__c</fullName>
        <label>Mass Merge 6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merck_Test1__c</fullName>
        <label>Merck Test1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merck_Test2__c</fullName>
        <label>Merck Test2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_field_1__c</fullName>
        <label>Merge field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_field_2__c</fullName>
        <label>Merge field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_used_app__c</fullName>
        <label>Most used app</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Apps_installed__c</fullName>
        <label>Number of Apps installed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_to_delete_apps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permission to delete apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Assistance__c</fullName>
        <label>Technical Assistance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X11_8_New_Field__c</fullName>
        <label>11.8 New Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPhone_Color__c</fullName>
        <label>iPhone Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>iPhone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>iPhone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iPhones</pluralLabel>
    <recordTypes>
        <fullName>JasoniPhone</fullName>
        <active>true</active>
        <label>JasoniPhone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Iphone_Version</fullName>
        <active>true</active>
        <description>If Iphone Version = 8,26. Update Does is Charge</description>
        <errorConditionFormula>AND(
 Permission_to_delete_apps__c = False,
  OR(
  ISPICKVAL(Iphone_Version__c, &quot;8&quot;)
 )
)</errorConditionFormula>
        <errorDisplayField>Permission_to_delete_apps__c</errorDisplayField>
        <errorMessage>Permission to Delete apps must be true if iPhone version equals 8</errorMessage>
    </validationRules>
</CustomObject>